*SVN*

* Look for rake tasks in plugin subdirs.  #6259 [obrie]

* Added map.connect ':controller/:action/:id.:format' as a default route to config/routes.rb [DHH]

* Updated prototype.js to 1.5.0_rc1 with latest fixes. [Rick Olson]

  - XPATH support
  - Make Form.getElements() return elements in the correct order
  - fix broken Form.serialize return

* session_migration generator adds an index on updated_at.  #6207 [grg]

* script/server creates the tmp/pids directory.  #6204 [jonathan]

* Fix script/console --sandbox for internal transactions changes.  #5738 [chris@octopod.info, charles.gerungan@gmail.com]

* Remove the uncanny default of adding all app/models/*/ directories to the load path. This change will break application which expect the current behavior. As
documented in initializer.rb, the workaround is:
  
  config.autoload_paths += Dir[RAILS_ROOT + '/app/models/*/']
  
References #6031. [Nicholas Seckar]

* Update to script.aculo.us 1.6.3 [Thomas Fuchs]

* Update to Prototype 1.5.0_rc1 [sam]

* Formally Deprecate the old rake tasks. [Koz]

* Thoroughly test the FCGI dispatcher.  #5970 [Kevin Clark]

* Remove Dir.chdir in the Webrick DispatchServlet#initialize method.  Fix bad path errors when trying to load config/routes.rb.  [Rick Olson]

* Tighten rescue clauses.  #5985 [james@grayproductions.net]

* Cleaning up tests. [Kevin Clark, Jeremy Kemper]

* Add Dependencies.load_once_paths. [Nicholas Seckar]

* Updated to script.aculo.us 1.6.2 [Thomas Fuchs]

* Assign Routing.controller_paths; fix script/about and rails info controller. [Nicholas Seckar]

* Don't warn dispatcher of Reloadable deprecations. [Nicholas Seckar]

* Rearrange application resetting and preparation, fix bug with leaking subclasses hash in ActiveRecord::Base [Rick Olson]

  ActiveRecord::Base.reset_subclasses is called before Dependencies are cleared and classes removed.
  ActiveRecord::Base.instantiate_observers is called during a Dispatcher preparation callback.
