@@ -2,9 +2,9 @@ require 'optparse'
 
 options = { :environment => (ENV['RAILS_ENV'] || "development").dup }
 
-ARGV.options do |opts|
+ARGV.clone.options do |opts|
   script_name = File.basename($0)
-  opts.banner = "Usage: runner 'puts Person.find(1).name' [options]"
+  opts.banner = "Usage: #{$0} [options] ('Some.ruby(code)' or a filename)"
 
   opts.separator ""
 
@@ -15,13 +15,31 @@ ARGV.options do |opts|
   opts.separator ""
 
   opts.on("-h", "--help",
-          "Show this help message.") { puts opts; exit }
+          "Show this help message.") { $stderr.puts opts; exit }
 
-  opts.parse!
+  if RUBY_PLATFORM !~ /mswin/
+    opts.separator ""
+    opts.separator "You can also use runner as a shebang line for your scripts like this:"
+    opts.separator "-------------------------------------------------------------"
+    opts.separator "#!/usr/bin/env #{File.expand_path($0)}"
+    opts.separator ""
+    opts.separator "Product.find(:all).each { |p| p.price *= 2 ; p.save! }"
+    opts.separator "-------------------------------------------------------------"
+  end
+
+  opts.parse! rescue retry
 end
 
 ENV["RAILS_ENV"] = options[:environment]
 RAILS_ENV.replace(options[:environment]) if defined?(RAILS_ENV)
 
 require RAILS_ROOT + '/config/environment'
-ARGV.empty? ? puts("Usage: runner 'code' [options]") : eval(ARGV.first)
+
+if ARGV.empty?
+  $stderr.puts "Run '#{$0} -h' for help."
+  exit 1
+elsif File.exists?(ARGV.first)
+  eval(File.read(ARGV.shift))
+else
+  eval(ARGV.first)
+end
